--- a/other/exercises.org
+++ b/other/exercises.org
@@ -1,5 +1,5 @@
 Just some programming exercises.
-* trees
+* Trees
 ** Building tree from inorder and postorder.
 Assignment: 
 *** tree 1
@@ -62,6 +62,7 @@ Tries to find the closest common ancestor in a tree between a list of values. Li
 
   tree = ('a', ('b', None, None), ('c', ('d', None, None), ('e', None, None)))
 
+  ## First call the helper, then use that dictionary to find lowest common member of the lists.
   def lowest_common_ancestor(vals, head):
       ancestor_paths = lowest_common_ancestor_helper(vals, head, [], {})
       print ancestor_paths
@@ -73,7 +74,7 @@ Tries to find the closest common ancestor in a tree between a list of values. Li
           bestans = k
       return bestans
           
-
+  ## Return a dictionary mapping each value we're looking at to a list repersenting its path.
   def lowest_common_ancestor_helper(vals, head, path, ans):
       for k in vals:
           if k == head[0]:
@@ -119,7 +120,7 @@ Assumes tree is a BST, only takes two values.
 #+RESULTS:
 : 5
 
-** Balance an unbalance BST
+** Balance an unbalanced BST
 Balance a tree, knowing that the left side is larger than the right.
        7
      5   8
@@ -187,7 +188,7 @@ Visit a node if never visited. Update path. New path will never be shorter than 
       Q.append(init)
       path_dict[init] = []
       while Q:
-          acts_visited = {}
+          acts_visited = [] # In case there are two edges connecting same actors
           curnode = Q.pop()
           if curnode == searchee:
               path_dict[searchee].append(searchee)
@@ -195,6 +196,7 @@ Visit a node if never visited. Update path. New path will never be shorter than 
           for k in curnode.getneighbors():
               if (k not in acts_visited) and k not in path_dict:
                   Q.append(k)
+                  acts_visited.append(k)
                   path_dict[k] = list(path_dict[curnode])
                   path_dict[k].append(curnode)
 
