--- a/other/exercises/exercises.org
+++ b/other/exercises/exercises.org
@@ -1,7 +1,6 @@
 Just some programming exercises.
 * EPI
 ** Stacks & Queues (8)
-
 *** Path Cleaning (8)
 Clean up a path name, dealing with ., .., and // in path names.
 #+BEGIN_SRC python :results output
@@ -166,36 +165,130 @@ Clean up a path name, dealing with ., .., and // in path names.
 : 28
 
 ** Binary Tree (9)
-*** Check Balance (1)
-#+BEGIN_SRC python
-  class Tree:
+*** Basic tree implementation
+#+BEGIN_SRC python :results output :tangle tree.py
 
+  class tree(object):
+      """ Simple tree implementation, where a tree is a list of lists (of lists), leaves are
+      lists with a single entry, and any subsequent entries represent children."""
+      def __init__(self, rootval, children=[], parent):
+          if isinstance(rootval, list):
+              self.value = rootval[0]
+              self.children = []
+              for k in rootval[1:]:
+                  self.add_child(tree(k))
+          else:
+              self.value = rootval
+              self.children = children
 
-      def __init__(self):
-          self.root = []
+      def __repr__(self):
+          return str(self.to_list())
 
-      def get_child(self, index):
-          return self.root[index]
+      def get_val(self):
+          return self.value
 
-      def follow_path(self, path):
-          temp = self.root
-          for k in path:
-              temp = temp[k]
+      def add_child(self, node):
+          self.children.append(node)
+
+      def get_child(self, num):
+          return self.children[num]
+
+      def get_num_children(self):
+          return len(self.children)
+
+      def get_children(self):
+          return self.children
+
+      def get_depths(self, start_depth=0):
+          data = [start_depth]
+          for child in self.get_children():
+              for child_datum in child.get_depths(start_depth + 1):
+                  data.append(child_datum)
+          return data
+
+      def to_list(self):
+          temp = list(self.children)
+          temp.insert(0, self.value)
           return temp
 
+
+  class binary_tree(tree):
+
+      def __init__(self, rootval, children=[]):
+          if isinstance(rootval, list):
+              self.value = rootval[0]
+              self.children = []
+              for k in rootval[1:]:
+                  self.add_child(binary_tree(k))
+          else:
+              self.value = rootval
+              self.children = children
+
+      def left(self):
+          if len(self.children) > 0 and isinstance(self.children[0], binary_tree):
+              return self.children[0]
+          else:
+              return None
+
+      def right(self):
+          if len(self.children) > 1 and isinstance(self.children[1], binary_tree):
+              return self.children[1]
+          else:
+              return None
+
+      def get_tree_height(self):
+          left_height = self.left().get_tree_height() if self.left() else 0
+          right_height = self.right().get_tree_height() if self.right() else 0
+          return 1 + max(left_height, right_height)
+
+      ## 9.1: Check if balanced
       def is_balanced(self):
-          def helper(self, node):
-              if not node:
-                  return 0
-              else:
-                  themin, themax = 0, 0
-                  for k in node:
-                      
-                  return min()
-              
-          for k in self.root:
-              
+          """ Return height of tree, or None if not balanced"""
+          left_height = self.left().is_balanced() if self.left() else 0
+          right_height = self.right().is_balanced() if self.right() else 0
+          if left_height == None or right_height == None or abs(right_height -
+                                                        left_height) > 1:
+              return None
+          else:
+              return 1 + max(left_height, right_height)
+
+      ## 9.2: k-balanced nodes
+      # def kbalanced(self)
+
+      ## 9.3 symmetric tree
+      def is_symmetric(self):
+          def symmetric_helper(left_node, right_node):
+              if bool(left_node) != bool(right_node):
+                  return False
+              if not (left_node or right_node):
+                  return True
+              if not left_node.get_val() == right_node.get_val():
+                  return False
+              return (symmetric_helper(left_node.left(), right_node.right())
+                      and symmetric_helper(left_node.right(), right_node.left()))
+          return symmetric_helper(self.left(), self.right())
+
+      ## 9.6
+
       
+  testtree = binary_tree([3, [1, [2, [3, [4]]]], [3, [2], [3]]])
+  balanced_tree = binary_tree([3, [2, [1], [3]], [2, [3], [3]]])
+  symmetric_tree = binary_tree([3, [2, [3], [2]], [2, [2], [3]]])
+  print(testtree.get_depths())
+  print(testtree.is_balanced())
+  print(balanced_tree.is_balanced())
+  print(testtree.is_symmetric())
+  print(symmetric_tree.is_symmetric())
+
+#+END_SRC
+
+#+RESULTS:
+: [0, 1, 2, 3, 4, 1, 2, 2]
+: 2
+: 2
+
+*** Check Balance (1)
+#+BEGIN_SRC python
 
 #+END_SRC
 * Trees
