--- a/other/exercises/exercises.org
+++ b/other/exercises/exercises.org
@@ -216,25 +216,22 @@ Clean up a path name, dealing with ., .., and // in path names.
       def __init__(self, rootval, children=[]):
           if isinstance(rootval, list):
               self.value = rootval[0]
-              self.children = []
-              for k in rootval[1:]:
-                  if k:
-                      self.add_child(binary_tree(k))
+              self.children = [binary_tree(x) for x in rootval[1:]] + [None for x in range(2-len(rootval[1:]))]
           else:
               self.value = rootval
-              self.children = children
+              self.children = children + [None for x in range(2-len(children))]
 
-      def left(self):
-          if len(self.children) > 0 and isinstance(self.children[0], binary_tree):
-              return self.children[0]
-          else:
-              return None
+      def get_left(self):
+          return self.children[0]
 
-      def right(self):
-          if len(self.children) > 1 and isinstance(self.children[1], binary_tree):
-              return self.children[1]
-          else:
-              return None
+      def get_right(self):
+          return self.children[1]
+
+      def set_left(self, node):
+          self.children[0] = node
+
+      def set_right(self, node):
+          self.children[1] = node
 
       def get_tree_height(self):
           left_height = self.left().get_tree_height() if self.left() else 0
@@ -244,8 +241,8 @@ Clean up a path name, dealing with ., .., and // in path names.
       ## 9.1: Check if balanced
       def is_balanced(self):
           """ Return height of tree, or None if not balanced"""
-          left_height = self.left().is_balanced() if self.left() else 0
-          right_height = self.right().is_balanced() if self.right() else 0
+          left_height = self.get_left().is_balanced() if self.get_left() else 0
+          right_height = self.get_right().is_balanced() if self.get_right() else 0
           if left_height == None or right_height == None or abs(right_height -
                                                         left_height) > 1:
               return None
@@ -257,31 +254,32 @@ Clean up a path name, dealing with ., .., and // in path names.
 
       ## 9.3 symmetric tree
       def is_symmetric(self):
+          """Return true if symmetric tree, else false"""
           def symmetric_helper(left_node, right_node):
-              if bool(left_node) != bool(right_node):
+              if bool(left_node) != bool(right_node): # If one exists and other doesn't, False
                   return False
-              if not (left_node or right_node):
+              if not (left_node or right_node): # If neither exists, True
                   return True
-              if not left_node.get_val() == right_node.get_val():
+              if not left_node.get_val() == right_node.get_val(): # If both exist but have different values, False
                   return False
-              return (symmetric_helper(left_node.left(), right_node.right())
-                      and symmetric_helper(left_node.right(), right_node.left()))
-          return symmetric_helper(self.left(), self.right())
+              # Otherwise, both exist, have same values, compare children...
+              return (symmetric_helper(left_node.get_left(), right_node.get_right())
+                      and symmetric_helper(left_node.get_right(), right_node.get_left()))
+          return symmetric_helper(self.get_left(), self.get_right())
 
       ## 9.7 reconstruct from inorder and preorder or postorder
-      @staticmethod
       def rec_inord_preord(inorder, preorder):
+          """Reconstruct tree from inorder and preorder lists"""
           if len(inorder) == 0:
               return None
           rootindex = inorder.index(preorder[0])
-          root = binary_tree(preorder[0])
-          leftroot = binary_tree.rec_inord_preord(inorder[:rootindex], preorder[1:1+rootindex])
-          # print(leftroot)
-          root.add_child(leftroot)
-          root.add_child(binary_tree.rec_inord_preord(inorder[rootindex+1:], preorder[rootindex+1:]))
+          root = binary_tree(preorder[0],
+                             [binary_tree.rec_inord_preord(inorder[:rootindex], preorder[1:1+rootindex]),
+                              binary_tree.rec_inord_preord(inorder[rootindex+1:], preorder[rootindex+1:])])
           return root
 
   testtree = binary_tree([3, [1, [2, [3, [4]]]], [3, [2], [3]]])
+  print(testtree.get_left())
   balanced_tree = binary_tree([3, [2, [1], [3]], [2, [3], [3]]])
   symmetric_tree = binary_tree([3, [2, [3], [2]], [2, [2], [3]]])
   # print(testtree.get_depths())
@@ -290,13 +288,12 @@ Clean up a path name, dealing with ., .., and // in path names.
   # print(testtree.is_symmetric())
   # print(symmetric_tree.is_symmetric())
 
-  chartree = binary_tree(['H', ['B', ['F', None, None], ['E', ['A', None, None], None]], ['C', None, ['D', None, ['G', ['I', None, None], None]]]])
-  chartree_inorder = ['F', 'B', 'A', 'E', 'H', 'C', 'D', 'I', 'G']
-  chartree_preorder = ['H', 'B', 'F', 'E', 'A', 'C', 'D', 'G', 'I']
-  nc = binary_tree.rec_inord_preord(chartree_inorder, chartree_preorder)
-  print("test2")
-  # print(chartree.to_list())
-  # print(nc.children)
+  # chartree = binary_tree(['H', ['B', ['F', None, None], ['E', ['A', None, None], None]], ['C', None, ['D', None, ['G', ['I', None, None], None]]]])
+  # chartree_inorder = ['F', 'B', 'A', 'E', 'H', 'C', 'D', 'I', 'G']
+  # chartree_preorder = ['H', 'B', 'F', 'E', 'A', 'C', 'D', 'G', 'I']
+  # nc = binary_tree.rec_inord_preord(chartree_inorder, chartree_preorder)
+  print(chartree.to_list())
+  print(nc)
 
 #+END_SRC
 
@@ -305,8 +302,8 @@ Clean up a path name, dealing with ., .., and // in path names.
 : 2
 : 2
 
-*** Check Balance (1)
-#+BEGIN_SRC python
+** Heap (10)
+#+BEGIN_SRC python :results output
 
 #+END_SRC
 * Trees
