--- a/other/exercises/exercises.org
+++ b/other/exercises/exercises.org
@@ -216,10 +216,10 @@ Clean up a path name, dealing with ., .., and // in path names.
       def __init__(self, rootval, children=[]):
           if isinstance(rootval, list):
               self.value = rootval[0]
-              self.children = [binary_tree(x) for x in rootval[1:]] + [None for x in range(2-len(rootval[1:]))]
+              self.children = [binary_tree(x) if x else x for x in rootval[1:]] + [None for x in range(2-len(rootval[1:]))]
           else:
               self.value = rootval
-              self.children = children + [None for x in range(2-len(children))]
+              self.children = children
 
       def get_left(self):
           return self.children[0]
@@ -268,18 +268,43 @@ Clean up a path name, dealing with ., .., and // in path names.
           return symmetric_helper(self.get_left(), self.get_right())
 
       ## 9.7 reconstruct from inorder and preorder or postorder
-      def rec_inord_preord(inorder, preorder):
+      def reconstruct_inorder_preorder(inorder, preorder):
           """Reconstruct tree from inorder and preorder lists"""
           if len(inorder) == 0:
               return None
           rootindex = inorder.index(preorder[0])
           root = binary_tree(preorder[0],
-                             [binary_tree.rec_inord_preord(inorder[:rootindex], preorder[1:1+rootindex]),
-                              binary_tree.rec_inord_preord(inorder[rootindex+1:], preorder[rootindex+1:])])
+                             [binary_tree.reconstruct_inorder_preorder(inorder[:rootindex], preorder[1:1+rootindex]),
+                              binary_tree.reconstruct_inorder_preorder(inorder[rootindex+1:], preorder[rootindex+1:])])
+          return root
+
+      ## 9.8 reconstruct tree from preorder transversal with null for empty nodes
+      def null_reconstruct_preorder(preorder):
+          if len(preorder) == 1:
+              return None
+          tcount, ncount = 0, 0
+          left = []
+          for i, k in enumerate(preorder[1:]):
+              if not k == None:
+                  tcount += 1
+              else:
+                  ncount += 1
+              left.append(k)
+              if ncount == tcount * 2 - (tcount - 1):
+                  right = preorder[i+2:]
+                  print (left, right)
+                  break
+          print(preorder[0])
+          print(preorder)
+          root = binary_tree(preorder[0])
+          if root:
+              print("yay")
+              root.set_left(binary_tree.null_reconstruct_preorder(left))
+              print("test")
+              root.set_right(binary_tree.null_reconstruct_preorder(right))
           return root
 
   testtree = binary_tree([3, [1, [2, [3, [4]]]], [3, [2], [3]]])
-  print(testtree.get_left())
   balanced_tree = binary_tree([3, [2, [1], [3]], [2, [3], [3]]])
   symmetric_tree = binary_tree([3, [2, [3], [2]], [2, [2], [3]]])
   # print(testtree.get_depths())
@@ -288,13 +313,18 @@ Clean up a path name, dealing with ., .., and // in path names.
   # print(testtree.is_symmetric())
   # print(symmetric_tree.is_symmetric())
 
-  # chartree = binary_tree(['H', ['B', ['F', None, None], ['E', ['A', None, None], None]], ['C', None, ['D', None, ['G', ['I', None, None], None]]]])
+  chartree = binary_tree(['H', ['B', ['F', None, None], ['E', ['A', None, None], None]], ['C', None, ['D', None, ['G', ['I', None, None], None]]]])
   # chartree_inorder = ['F', 'B', 'A', 'E', 'H', 'C', 'D', 'I', 'G']
   # chartree_preorder = ['H', 'B', 'F', 'E', 'A', 'C', 'D', 'G', 'I']
-  # nc = binary_tree.rec_inord_preord(chartree_inorder, chartree_preorder)
-  print(chartree.to_list())
-  print(nc)
+  # nc = binary_tree.reconstruct_inorder_preorder(chartree_inorder, chartree_preorder)
+  # print(chartree.to_list())
+  # print(nc)
 
+  chartree_preorder_marked = ['H', 'B', 'F', None, None, 'E', 'A',
+                              None, None, None, 'C', None, 'D',
+                              None, 'G', 'I', None, None, None]
+  print(chartree)
+  print(binary_tree.null_reconstruct_preorder(chartree_preorder_marked))
 #+END_SRC
 
 #+RESULTS:
